--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
 </head>
 
 <body>
-    <h1>hello</h1>
+    <h1>Header</h1>
     <hr>
-    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quod, nisi, expedita adipisci rem a totam officiis fuga, beatae iste quasi nulla praesentium. Animi non ducimus ab assumenda eos? Ex?</span>
-    
-        <li>list</li>
-        <li>hhh
-            <ol>hh</ol>
-        </li>
+    <img src="../flower.jpg">
+    <span>Red</span>
+    <br>
+    <span>Yellow</span><img src="../flower.jpg">
+    <p>Blue</p><img src="../flower.jpg">
+    <p><strong>Lorem ipsum dolor sit amet consectetur</strong>
+        <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;elit. Veritatis, dolorem.
+        <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>sunt eveniet, qui illo molestiae omnis cupiditate
+            iure dicta fugiat deleniti, non distinctio nemo eaque, voluptates doloremque incidunt?</strong>
+    </p>
+    <li>Vegatables</li>
+    <pre>     Radish   Tomato</pre>
+    <pre>     Beans   Cucumber</pre>
+    <li>Fruits</li>
 </body>
+
 </html>
