--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
     <h1>Header</h1>
     <hr>
-    <img src="../flower.jpg">
+    <img src="flower.jpeg">
     <span>Red</span>
     <br>
-    <span>Yellow</span><img src="../flower.jpg">
-    <p>Blue</p><img src="../flower.jpg">
+    <span>Yellow</span><img src="../flower.jpeg">
+    <p>Blue</p><img src="../flower.jpeg">
     <p><strong>Lorem ipsum dolor sit amet consectetur</strong>
         <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;elit. Veritatis, dolorem.
         <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>sunt eveniet, qui illo molestiae omnis cupiditate
@@ -19,8 +19,7 @@
     </p>
     <li>Vegatables</li>
     <pre>     Radish   Tomato</pre>
-    <pre>     Beans   Cucumber</pre>
-    <li>Fruits</li>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Beans   Cucumber<li>Fruits</li>
 </body>
 
 </html>
