--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
     <h1>Header</h1>
     <hr>
-    <img src="flower.jpeg">
+    <img src="flower.jpeg" width="100">
     <span>Red</span>
     <br>
-    <span>Yellow</span><img src="../flower.jpeg">
-    <p>Blue</p><img src="../flower.jpeg">
+    <span>Yellow</span><img src="flower.jpeg" width="100">
+    <p>Blue</p><img src="flower.jpeg" width="100">
     <p><strong>Lorem ipsum dolor sit amet consectetur</strong>
         <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;elit. Veritatis, dolorem.
         <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>sunt eveniet, qui illo molestiae omnis cupiditate
