--- a/index.html
+++ b/index.html
@@ -5,21 +5,9 @@
 </head>
 
 <body>
-    <h1>Header</h1>
-    <hr>
-    <img src="flower.jpeg" width="100">
-    <span>Red</span>
-    <br>
-    <span>Yellow</span><img src="flower.jpeg" width="100">
-    <p>Blue</p><img src="flower.jpeg" width="100">
-    <p><strong>Lorem ipsum dolor sit amet consectetur</strong>
-        <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;elit. Veritatis, dolorem.
-        <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>sunt eveniet, qui illo molestiae omnis cupiditate
-            iure dicta fugiat deleniti, non distinctio nemo eaque, voluptates doloremque incidunt?</strong>
-    </p>
-    <li>Vegatables</li>
-    <pre>     Radish   Tomato</pre>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Beans   Cucumber<li>Fruits</li>
+    <a href="/about.html">Quiz1</a> 
+    <a href="/contact.html">Quiz2</a>
+    <a href="/main.html">Quiz3</a>
 </body>
 
 </html>
