--- a/centered_div.html
+++ b/centered_div.html
@@ -6,7 +6,11 @@
         div{
             border: 1px solid red;
             height: 300px;
-            padding: 100px;
+            justify-content: center;
+            gap:10px;
+            padding: 30px;
+            align-items: center;
+            display: flex;
         }
     </style>
 </head>
