--- a/text_over_img.html
+++ b/text_over_img.html
@@ -3,13 +3,18 @@
 
 <head>
     <style>
-        
+        label{
+            color: darkgoldenrod;
+            position: absolute;
+            background-color: yellow;
+            z-index: -1;
+        }
     </style>
 </head>
 
 <body>
 <div>
-    <label>text</label>
+    <label>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit odio eum corporis pariatur modi explicabo nobis voluptate enim neque voluptatem architecto ut, sequi fugiat earum velit id quasi nisi itaque?</label>
     <img src="/flower.jpeg" width="100px;"/>
 </div>
 </body>
