--- a/responsive_image.html
+++ b/responsive_image.html
@@ -2,11 +2,21 @@
 <html>
 
 <head>
-    <link href="/page.css" rel="stylesheet">
+    <style>
+        div{
+            border: 1px solid red;
+        }
+        img{
+            width: 30%;
+        }
+
+    </style>
 </head>
 
 <body>
-   
+    <div>
+        <img src="/flower.jpeg" alt="flower" width="100px;">
+    </div>
 </body>
 
 </html>
