add margins and paddings

--- a/css.html
+++ b/css.html
@@ -13,6 +13,7 @@
     <a href="/positions.html">Positions</a><br>
     <a href="/text_align.html">Text-Align</a><br>
     <a href="/flex.html">Flex Columns</a><br>
+    <a href="/margins.html">Margins and Paddings</a><br>
 </body>
 
 </html>
