add index page changes

--- a/positions.html
+++ b/positions.html
@@ -2,11 +2,20 @@
 <html>
 
 <head>
-    <link href="/page.css" rel="stylesheet">
+
 </head>
 
 <body>
-   
+    <div style="position: relative; display: inline;">
+        <img src="/flower.jpeg" width="100px;" />
+    </div>
+    <div style="position:absolute; display: inline;">
+        <img src="/flower.jpeg" width="100px;" />
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, ab. Sapiente accusamus aperiam vero esse aliquid et! Ullam illum tempora est ducimus repellat debitis magnam earum, iste sapiente, corporis tempore!</p>
+    </div>
+
 </body>
 
 </html>
