--- a/positions.html
+++ b/positions.html
@@ -9,7 +9,7 @@
     <div style="position: relative; display: inline;">
         <img src="/flower.jpeg" width="100px;" />
     </div>
-    <div style="position:absolute; display: inline;">
+    <div style="position:relative; display: inline;">
         <img src="/flower.jpeg" width="100px;" />
     </div>
     <div>
