--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <a href="/text_align.html">Text-Align</a><br>
     <a href="/flex.html">Flex Columns</a><br>
     <a href="/margins.html">Margins and Paddings</a><br>
+    <a href="/borders_back.html">Backgrounds & Borders</a><br>
 </body>
 
 </html>
