--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a href="/positions.html">Positions</a><br>
     <a href="/text_align.html">Text-Align</a><br>
     <a href="/flex.html">Flex Columns</a><br>
+    <a href="/floats.html">More Float Use cases</a><br>
     <a href="/margins.html">Margins and Paddings</a><br>
     <a href="/borders_back.html">Backgrounds & Borders</a><br>
 </body>
