add some changes

--- a/positions.html
+++ b/positions.html
@@ -6,12 +6,8 @@
 </head>
 
 <body>
-    <div style="position: relative; display: inline;">
         <img src="/flower.jpeg" width="100px;" />
-    </div>
-    <div style="position:relative; display: inline;">
-        <img src="/flower.jpeg" width="100px;" />
-    </div>
+        <img src="/flower.jpeg" width="100px;" style="position: fixed; right: 0;"/>
     <div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, ab. Sapiente accusamus aperiam vero esse aliquid et! Ullam illum tempora est ducimus repellat debitis magnam earum, iste sapiente, corporis tempore!</p>
     </div>
