--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 </head>
 
 <body>
-    <a href="/about.html">Quiz1</a> 
-    <a href="/contact.html">Quiz2</a>
-    <a href="/main.html">Quiz3</a>
+    <a href="about.html">Quiz1</a> 
+    <a href="contact.html">Quiz2</a>
+    <a href="main.html">Quiz3</a>
     <p>Second assignment</p>
-    <a href="/centered_div.html">Center DIV</a><br>
-    <a href="/text_over_img.html">Text Over Image</a><br>
-    <a href="/round_img.html">Round Image</a><br>
-    <a href="/responsive_image.html">Responsive Image</a><br>
-    <a href="/positions.html">Positions</a><br>
-    <a href="/text_align.html">Text-Align</a><br>
-    <a href="/flex.html">Flex Columns</a><br>
-    <a href="/floats.html">More Float Use cases</a><br>
-    <a href="/margins.html">Margins and Paddings</a><br>
-    <a href="/borders_back.html">Backgrounds & Borders</a><br>
+    <a href="centered_div.html">Center DIV</a><br>
+    <a href="text_over_img.html">Text Over Image</a><br>
+    <a href="round_img.html">Round Image</a><br>
+    <a href="responsive_image.html">Responsive Image</a><br>
+    <a href="positions.html">Positions</a><br>
+    <a href="text_align.html">Text-Align</a><br>
+    <a href="flex.html">Flex Columns</a><br>
+    <a href="floats.html">More Float Use cases</a><br>
+    <a href="margins.html">Margins and Paddings</a><br>
+    <a href="borders_back.html">Backgrounds & Borders</a><br>
 </body>
 
 </html>
