--- a/centered_div.html
+++ b/centered_div.html
@@ -17,7 +17,7 @@
 
 <body>
     <div>
-        <img src="/flower.jpeg" alt="flower" width="100px;">
+        <img src="flower.jpeg" alt="flower" width="100px;">
         <label>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum, numquam nobis cum a nemo, quia, culpa error officia eius autem laudantium? Perspiciatis qui consequatur maiores quos aliquid similique porro dolorem?</label>
     </div>
 </body>
