--- a/floats.html
+++ b/floats.html
@@ -9,7 +9,7 @@
 <body>
     <h4>Image Right</h4>
     <div style="display: flow-root;">
-        <img src="/flower.jpeg" width="15%;" style="float: right; object-fit: cover;" />
+        <img src="flower.jpeg" width="15%;" style="float: right; object-fit: cover;" />
         <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit rem adipisci commodi ducimus? Harum
             corrupti, soluta natus ratione assumenda necessitatibus dolore, ipsam sint doloribus ab explicabo error nam
             ex cumque. </div>
@@ -17,8 +17,8 @@
 
     <h4>Image Left</h4>
     <div style="display: flow-root;">
-        <img src="/flower.jpeg" width="15%;" style="float: left; object-fit: cover;"/>
-        <img src="/flower.jpeg" width="15%;" style="float: right; object-fit: cover;"/>
+        <img src="flower.jpeg" width="15%;" style="float: left; object-fit: cover;"/>
+        <img src="flower.jpeg" width="15%;" style="float: right; object-fit: cover;"/>
         <div>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit rem adipisci commodi ducimus? Harum
             corrupti, soluta natus ratione assumenda necessitatibus dolore, ipsam sint doloribus ab explicabo error nam
@@ -29,8 +29,8 @@
 
     <h4>Text in between images</h4>
     <div style="display: flow-root;">
-        <img src="/flower.jpeg" width="15%;" style="float: left; object-fit: cover;"/>
-        <img src="/flower.jpeg" width="15%;" style="float: right; object-fit: cover;"/>
+        <img src="flower.jpeg" width="15%;" style="float: left; object-fit: cover;"/>
+        <img src="flower.jpeg" width="15%;" style="float: right; object-fit: cover;"/>
         <div>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit rem adipisci commodi ducimus? Harum
             corrupti, soluta natus ratione assumenda necessitatibus dolore, ipsam sint doloribus ab explicabo error nam
@@ -45,7 +45,7 @@
             corrupti, soluta natus ratione assumenda necessitatibus dolore, ipsam sint doloribus ab explicabo error nam
             ex cumque.
         </div>
-        <img src="/flower.jpeg" width="15%;" style="object-fit: cover; float: left;"/>
+        <img src="flower.jpeg" width="15%;" style="object-fit: cover; float: left;"/>
         <div style="float: left; width: 40%;">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit rem adipisci commodi ducimus? Harum
             corrupti, soluta natus ratione assumenda necessitatibus dolore, ipsam sint doloribus ab explicabo error nam
