--- a/main.html
+++ b/main.html
@@ -33,12 +33,12 @@
     </table>
     </div>
     <hr>
-    <img src="/flower.jpeg" width="60">
-    <img src="/flower.jpeg" width="60">
-    <img src="/flower.jpeg" width="60">
+    <img src="flower.jpeg" width="60">
+    <img src="flower.jpeg" width="60">
+    <img src="flower.jpeg" width="60">
     <br>
     <span>Click me! to open google search </span>
-    <a href="http://www.google.com"><img src="/flower.jpeg" width="60"></a>
+    <a href="http://www.google.com"><img src="flower.jpeg" width="60"></a>
 
 </body>
 
