--- a/responsive_image.html
+++ b/responsive_image.html
@@ -15,7 +15,7 @@
 
 <body>
     <div>
-        <img src="/flower.jpeg" alt="flower" width="100px;">
+        <img src="flower.jpeg" alt="flower" width="100px;">
     </div>
 </body>
 
