--- a/borders_back.html
+++ b/borders_back.html
@@ -4,7 +4,7 @@
 <head>
 <style>
     .myDiv{
-        background-image: url("/flower.jpeg");
+        background-image: url("flower.jpeg");
         padding: 10px;
         border-radius: 10px;
         border: 1px solid blue;
