--- a/positions.html
+++ b/positions.html
@@ -6,11 +6,21 @@
 </head>
 
 <body>
-        <img src="/flower.jpeg" width="100px;" />
-        <img src="/flower.jpeg" width="100px;" style="position: fixed; right: 0;"/>
+    <img src="flower.jpeg" width="100px;" />
+    <img src="flower.jpeg" width="100px;" style="position: fixed; right: 0;" />
     <div>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, ab. Sapiente accusamus aperiam vero esse aliquid et! Ullam illum tempora est ducimus repellat debitis magnam earum, iste sapiente, corporis tempore!</p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, ab. Sapiente accusamus aperiam vero esse
+        aliquid et! Ullam illum tempora est ducimus repellat debitis magnam earum, iste sapiente, corporis tempore!
     </div>
+    <label>My label</label><br>
+    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam debitis, alias inventore culpa suscipit, quos
+        provident iure ipsam commodi quas consectetur sit laborum at temporibus magnam dolore repellat quibusdam
+        quisquam.</div>
+    <img src="flower.jpeg" width="100px;" style="position: fixed; top: 150px;" /><br>
+    <div style="color: yellow;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam debitis, alias inventore culpa suscipit, quos
+        provident iure ipsam commodi quas consectetur sit laborum at temporibus magnam dolore repellat quibusdam
+        quisquam.</div>
+    <img src="flower.jpeg" width="100px;" style="position: fixed; left: 0px; bottom: 0px;" />
 
 </body>
 
