--- a/round_img.html
+++ b/round_img.html
@@ -11,7 +11,7 @@
 
 <body>
     <div>
-        <img src="/flower.jpeg" width="250px;" />
+        <img src="flower.jpeg" width="250px;" />
     </div>
 </body>
 
