--- a/text_over_img.html
+++ b/text_over_img.html
@@ -15,7 +15,7 @@
 <body>
 <div>
     <label>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit odio eum corporis pariatur modi explicabo nobis voluptate enim neque voluptatem architecto ut, sequi fugiat earum velit id quasi nisi itaque?</label>
-    <img src="/flower.jpeg" width="100px;"/>
+    <img src="flower.jpeg" width="100px;"/>
 </div>
 </body>
 
