--- a/positions.html
+++ b/positions.html
@@ -6,8 +6,13 @@
 </head>
 
 <body>
-    <img src="flower.jpeg" width="100px;" />
-    <img src="flower.jpeg" width="100px;" style="position: fixed; right: 0;" />
+    <img src="flower.jpeg" width="150px; height=200px;" />
+    <img src="flower.jpeg" width="100px;" style="position: fixed; right: 0px;" />
+
+    <img src="flower.jpeg" width="200px;" height="200px;"
+        style="position: fixed; top: 20%;bottom: 40%; left: 40%; object-fit: cover;" /><br>
+
+    <img src="flower.jpeg" width="100px;" style="position: fixed; left: 0px; bottom: 0px; object-fit: cover;" />
     <div>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, ab. Sapiente accusamus aperiam vero esse
         aliquid et! Ullam illum tempora est ducimus repellat debitis magnam earum, iste sapiente, corporis tempore!
@@ -16,12 +21,10 @@
     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam debitis, alias inventore culpa suscipit, quos
         provident iure ipsam commodi quas consectetur sit laborum at temporibus magnam dolore repellat quibusdam
         quisquam.</div>
-    <img src="flower.jpeg" width="100px;" style="position: fixed; top: 150px;" /><br>
-    <div style="color: yellow;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam debitis, alias inventore culpa suscipit, quos
+    <div style="color: yellow; position: relative;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam
+        debitis, alias inventore culpa suscipit, quos
         provident iure ipsam commodi quas consectetur sit laborum at temporibus magnam dolore repellat quibusdam
         quisquam.</div>
-    <img src="flower.jpeg" width="100px;" style="position: fixed; left: 0px; bottom: 0px;" />
-
 </body>
 
 </html>
