--- a/css.html
+++ b/css.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <link href="/page.css" rel="stylesheet">
+<head role="banner">
+    <style>
+        article span:nth-child(2){
+            color: blue;
+        }
+    </style>
+
+
 </head>
 
 <body>
-    <a href="/centered_div.html">Center DIV</a><br>
-    <a href="/text_over_img.html">Text Over Image</a><br>
-    <a href="/round_img.html">Round Image</a><br>
-    <a href="/responsive_image.html">Responsive Image</a><br>
-    <a href="/positions.html">Positions</a><br>
-    <a href="/text_align.html">Text-Align</a><br>
-    <a href="/flex.html">Flex Columns</a><br>
-    <a href="/margins.html">Margins and Paddings</a><br>
+    <article>
+        <label> Roses</label>
+        <span>Hibiscus</span>
+        <article>
+            <span>Shrubs</span>
+            <span>dddd</span>
+            <div>
+                <span>Trees</span>
+            </div>
+        </article>
+        <span>Hibiscus</span>
+    </article>
+    <span>Hibiscus</span>
 </body>
 
 </html>
